tests/snapshots/cli_script__script_create_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 1003,
  "Name": "new-script",
  "LastModified": "2024-02-01T09:00:00Z",
  "ScriptType": 1,
  "CurrentReleaseId": 0,
  "EdgeScriptVariables": null,
  "Deleted": false,
  "LinkedPullZones": null,
  "Integration": null,
  "DefaultHostname": "new-script.b-cdn.net",
  "SystemHostname": null,
  "RepositoryId": null,
  "IntegrationId": null,
  "MonthlyCost": 0.0,
  "MonthlyRequestCount": 0,
  "MonthlyCpuTime": 0
}
