tests/snapshots/cli_script__script_get_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 1001,
  "Name": "my-cdn-script",
  "LastModified": "2024-01-15T10:00:00Z",
  "ScriptType": 1,
  "CurrentReleaseId": 501,
  "EdgeScriptVariables": [
    {
      "Id": 201,
      "Name": "API_URL",
      "Required": true,
      "DefaultValue": "https://api.example.com"
    }
  ],
  "Deleted": false,
  "LinkedPullZones": [
    {
      "Id": 9001,
      "PullZoneName": "my-pull-zone",
      "DefaultHostname": "my-pull-zone.b-cdn.net"
    }
  ],
  "Integration": null,
  "DefaultHostname": "my-cdn-script.b-cdn.net",
  "SystemHostname": "sys-my-cdn-script.b-cdn.net",
  "RepositoryId": null,
  "IntegrationId": null,
  "MonthlyCost": 0.0,
  "MonthlyRequestCount": 12500,
  "MonthlyCpuTime": 3200
}
