tests/snapshots/cli_script__script_get_table.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+---------------+------+----------------------+-------------------------+-----------------------------+--------------+------------------+--------------------+
| ID   | Name          | Type | Last Modified        | Hostname                | System Hostname             | Monthly Cost | Monthly Requests | Current Release ID |
+------+---------------+------+----------------------+-------------------------+-----------------------------+--------------+------------------+--------------------+
| 1001 | my-cdn-script | Cdn  | 2024-01-15T10:00:00Z | my-cdn-script.b-cdn.net | sys-my-cdn-script.b-cdn.net | 0.0000       | 12500            | 501                |
+------+---------------+------+----------------------+-------------------------+-----------------------------+--------------+------------------+--------------------+
