tests/snapshots/cli_script__script_list_table.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+---------------+------+----------------------+-------------------------+
| ID   | Name          | Type | Last Modified        | Hostname                |
+------+---------------+------+----------------------+-------------------------+
| 1001 | my-cdn-script | Cdn  | 2024-01-15T10:00:00Z | my-cdn-script.b-cdn.net |
+------+---------------+------+----------------------+-------------------------+
| 1002 | my-dns-script | Dns  | 2024-01-16T12:30:00Z | my-dns-script.b-cdn.net |
+------+---------------+------+----------------------+-------------------------+
