tests/snapshots/cli_script__script_release_list_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Items": [
    {
      "Id": 501,
      "Deleted": false,
      "Code": null,
      "Uuid": "abc123de-f456-7890-abcd-ef1234567890",
      "Note": "Initial release",
      "Author": "James",
      "AuthorEmail": "james@example.com",
      "CommitSha": null,
      "Status": 1,
      "DateReleased": "2024-01-15T10:00:00Z",
      "DatePublished": "2024-01-15T10:05:00Z"
    },
    {
      "Id": 502,
      "Deleted": false,
      "Code": null,
      "Uuid": "def456ab-c789-0123-defg-ab0123456789",
      "Note": "Bug fix release",
      "Author": "James",
      "AuthorEmail": "james@example.com",
      "CommitSha": null,
      "Status": 0,
      "DateReleased": "2024-01-20T15:00:00Z",
      "DatePublished": "2024-01-20T15:02:00Z"
    }
  ],
  "CurrentPage": 1,
  "TotalItems": 2,
  "HasMoreItems": false
}
