tests/snapshots/cli_script__script_secret_add_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 403,
  "Name": "NEW_SECRET",
  "LastModified": "2024-02-01T09:00:00Z"
}
