tests/snapshots/cli_script__script_secret_list_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "Id": 401,
    "Name": "API_SECRET_KEY",
    "LastModified": "2024-01-10T08:00:00Z"
  },
  {
    "Id": 402,
    "Name": "DATABASE_PASSWORD",
    "LastModified": "2024-01-12T14:30:00Z"
  }
]
