tests/snapshots/cli_script__script_variable_add_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 301,
  "Name": "NEW_VAR",
  "Required": true,
  "DefaultValue": "default-value"
}
