tests/snapshots/cli_script__script_variable_list_json.snap
---
source: tests/cli_script.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[
  {
    "Id": 201,
    "Name": "API_URL",
    "Required": true,
    "DefaultValue": "https://api.example.com"
  }
]
